Changelog


0.6.0 - 18th September 2019
===========================

New

* Addition of appointment versions of list_qim
  e.g. list_qim_cvdRisk_appointments

Breaking changes

* Move Quality Improvement Measures to separate package (module)
  'dMeasureQIM'

Improvement

* Framingham risk equation function

  Default is now cardiovascular (instead of coronary heart disease) risk

Bugfix

* GPMP R/V in CDM had reversed colours (yellow/green)
  and actions ('Overdue'). Fixed

0.5.0 - 9th September 2019
===========================

Added vignette

* Change billings_list method to list_billings
* Integrates appointments, visits and billing contacts into single view
* Add 'own_billings' active field, if FALSE, then all of the patient's
  billings for the day are shown (not just those attributed to the
  same provider listed for that contact)

* Include 'status' in list_appointments return dataframe

* Fixes to server.delete and server.update methods


0.4.0 - 4th September 2019
==========================

Practice Incentive Program (PIP) Quality Improvement Measures
: lists and reports available for all ten measures

Mammogram added to cancer screening
Cervical screening (including Pap) added to cancer screening