@@ -48,7 +48,6 @@ export(filter_investigations)
 export(filter_investigations_appointment)
 export(filter_investigations_named)
 export(fortyfiveseventyfour_list)
-export(framingham_riskequation)
 export(haemoglobinopathy_list)
 export(hiv_list)
 export(hrmin)
